crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_mixed.snap
---
source: crates/nash-parse/src/exposing.rs
description: "(foo, Bar, Baz(..), (+))"
---
Explicit(
    [
        Lower(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: "foo",
            },
        ),
        Upper {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: "Bar",
            },
            privacy: Private,
        },
        Upper {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: "Baz",
            },
            privacy: Public(
                Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
            ),
        },
        Operator {
            region: Region {
                start: Position {
                    line: 1,
                    column: 21,
                },
                end: Position {
                    line: 1,
                    column: 24,
                },
            },
            op: "+",
        },
    ],
)
