crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_operator.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n((+))"
---
Explicit(
    [
        Operator {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            op: "+",
        },
    ],
)
