crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_single_value.snap
---
source: crates/nash-parse/src/exposing.rs
description: (foo)
---
Explicit(
    [
        Lower(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: "foo",
            },
        ),
    ],
)
