crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_type_public.snap
---
source: crates/nash-parse/src/exposing.rs
description: "Code:\n\n(Foo(..))"
---
Explicit(
    [
        Upper {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: "Foo",
            },
            privacy: Public(
                Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
            ),
        },
    ],
)
