crates/nash-parse/src/snapshots/nash_parse__exposing__tests__exposing_with_spaces.snap
---
source: crates/nash-parse/src/exposing.rs
description: "( foo , bar )"
---
Explicit(
    [
        Lower(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: "foo",
            },
        ),
        Lower(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: "bar",
            },
        ),
    ],
)
